{
  "version": 4,
  "terraform_version": "0.12.25",
  "serial": 43,
  "lineage": "07daaf2d-6a03-9b88-2d03-416921f41720",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "soupparadjis_terraria_ip",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "association_id": "eipassoc-0cd4e5155bba90832",
            "domain": "vpc",
            "id": "eipalloc-04a0b665bd45c3eb3",
            "instance": "i-08af3d8c0330dad68",
            "network_interface": "eni-0b9b2355bcae250a8",
            "private_dns": "ip-10-0-0-31.eu-central-1.compute.internal",
            "private_ip": "10.0.0.31",
            "public_dns": "ec2-3-125-182-203.eu-central-1.compute.amazonaws.com",
            "public_ip": "3.125.182.203",
            "public_ipv4_pool": "amazon",
            "tags": {
              "URL": "soupparadijs.terraria.stringendo.io"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "soupparadjis_terraria_ec2",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0b6d8a6db0c665fb7",
            "arn": "arn:aws:ec2:eu-central-1:810842312987:instance/i-08af3d8c0330dad68",
            "associate_public_ip_address": true,
            "availability_zone": "eu-central-1b",
            "cpu_core_count": 2,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-08af3d8c0330dad68",
            "instance_state": "running",
            "instance_type": "t2.medium",
            "ipv6_address_count": 0,
            "key_name": "terraria_ec2_key",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0b9b2355bcae250a8",
            "private_dns": "ip-10-0-0-31.eu-central-1.compute.internal",
            "private_ip": "10.0.0.31",
            "public_ip": "3.125.182.203",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-0e1387cea8654470a",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-07a3833e97770a144",
            "tags": {
              "Env": "Gameservers Environment"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0872bab3c4bcd8706",
              "sg-08b3d1f1f0c4fdb43",
              "sg-0f8e2df204bceb01c"
            ]
          },
          "dependencies": [
            "aws_key_pair.terraria_administrator_ec2_keypair",
            "aws_security_group.security_group_administration",
            "aws_security_group.security_group_allow_outbound",
            "aws_security_group.security_group_terraria_client",
            "aws_subnet.terraria_subnet",
            "aws_vpc.gaming_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "gaming_vpc_gateway",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "igw-0c44d818cd8dc5089",
            "owner_id": "810842312987",
            "tags": {
              "Env": "Gameservers Environment"
            },
            "vpc_id": "vpc-04053a388167a17f0"
          },
          "dependencies": [
            "aws_vpc.gaming_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public_gaming_vpc_routes",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-0ba50e931b3db01ea",
            "owner_id": "810842312987",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0c44d818cd8dc5089",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Env": "Gameservers Environment",
              "Name": "mytagged_vpcs_route_table"
            },
            "vpc_id": "vpc-04053a388167a17f0"
          },
          "dependencies": [
            "aws_internet_gateway.gaming_vpc_gateway",
            "aws_vpc.gaming_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "terraria_subnet_publification",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-01975372480dbf8b2",
            "route_table_id": "rtb-0ba50e931b3db01ea",
            "subnet_id": "subnet-07a3833e97770a144"
          },
          "dependencies": [
            "aws_internet_gateway.gaming_vpc_gateway",
            "aws_route_table.public_gaming_vpc_routes",
            "aws_subnet.terraria_subnet",
            "aws_vpc.gaming_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "security_group_administration",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:810842312987:security-group/sg-08b3d1f1f0c4fdb43",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "id": "sg-08b3d1f1f0c4fdb43",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "sg_tcp22",
            "name_prefix": null,
            "owner_id": "810842312987",
            "revoke_rules_on_delete": false,
            "tags": {
              "Env": "Gameservers Environment"
            },
            "timeouts": null,
            "vpc_id": "vpc-04053a388167a17f0"
          },
          "dependencies": [
            "aws_vpc.gaming_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "security_group_allow_outbound",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:810842312987:security-group/sg-0f8e2df204bceb01c",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0f8e2df204bceb01c",
            "ingress": [],
            "name": "sg_allow_all_outbound",
            "name_prefix": null,
            "owner_id": "810842312987",
            "revoke_rules_on_delete": false,
            "tags": {
              "Env": "Gameservers Environment"
            },
            "timeouts": null,
            "vpc_id": "vpc-04053a388167a17f0"
          },
          "dependencies": [
            "aws_vpc.gaming_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "security_group_terraria_client",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:810842312987:security-group/sg-0872bab3c4bcd8706",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 7777,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 7777
              }
            ],
            "id": "sg-0872bab3c4bcd8706",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 7777,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 7777
              }
            ],
            "name": "sg_tcp7777",
            "name_prefix": null,
            "owner_id": "810842312987",
            "revoke_rules_on_delete": false,
            "tags": {
              "Env": "Gameservers Environment"
            },
            "timeouts": null,
            "vpc_id": "vpc-04053a388167a17f0"
          },
          "dependencies": [
            "aws_vpc.gaming_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "terraria_subnet",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:810842312987:subnet/subnet-07a3833e97770a144",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1b",
            "availability_zone_id": "euc1-az3",
            "cidr_block": "10.0.0.0/24",
            "id": "subnet-07a3833e97770a144",
            "map_public_ip_on_launch": false,
            "owner_id": "810842312987",
            "tags": {
              "Env": "Gameservers Environment"
            },
            "vpc_id": "vpc-04053a388167a17f0"
          },
          "dependencies": [
            "aws_vpc.gaming_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "gaming_vpc",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:810842312987:vpc/vpc-04053a388167a17f0",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0c878ff4770ce501a",
            "default_route_table_id": "rtb-090e931ec651e4f57",
            "default_security_group_id": "sg-0dcfc0aaf862dafa6",
            "dhcp_options_id": "dopt-bc01c7d6",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-04053a388167a17f0",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-090e931ec651e4f57",
            "owner_id": "810842312987",
            "tags": {
              "Env": "Gameservers Environment"
            }
          }
        }
      ]
    }
  ]
}